force-app/main/default/objects/Picklist_Translations__mdt/Picklist_Translations__mdt.object-meta.xml
<CustomObject>
    <label>Picklist Translation</label>
    <pluralLabel>Picklist Translations</pluralLabel>
</CustomObject>