force-app/main/default/objects/Picklist_Translations__mdt/fields/ar__c.field-meta.xml
<CustomField>
    <fullName>ar__c</fullName>
    <description>arabic</description>
    <label>ar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>