force-app/main/default/objects/Picklist_Translations__mdt/fields/cs__c.field-meta.xml
<CustomField>
    <fullName>cs__c</fullName>
    <description>czech</description>
    <label>cs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>