force-app/main/default/objects/Picklist_Translations__mdt/fields/da__c.field-meta.xml
<CustomField>
    <fullName>da__c</fullName>
    <description>danish</description>
    <label>da</label>
    <length>255</length>
    <type>Text</type>
</CustomField>