force-app/main/default/objects/Picklist_Translations__mdt/fields/de__c.field-meta.xml
<CustomField>
    <fullName>de__c</fullName>
    <description>german</description>
    <label>de</label>
    <length>255</length>
    <type>Text</type>
</CustomField>