force-app/main/default/objects/Picklist_Translations__mdt/fields/el__c.field-meta.xml
<CustomField>
    <fullName>el__c</fullName>
    <description>greek</description>
    <label>el</label>
    <length>255</length>
    <type>Text</type>
</CustomField>