force-app/main/default/objects/Picklist_Translations__mdt/fields/es_mx__c.field-meta.xml
<CustomField>
    <fullName>es_mx__c</fullName>
    <description>spanish mexico</description>
    <label>es_mx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>