force-app/main/default/objects/Picklist_Translations__mdt/fields/fi__c.field-meta.xml
<CustomField>
    <fullName>fi__c</fullName>
    <description>finnish</description>
    <label>fi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>