force-app/main/default/objects/Picklist_Translations__mdt/fields/fr__c.field-meta.xml
<CustomField>
    <fullName>fr__c</fullName>
    <description>french</description>
    <label>fr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>