force-app/main/default/objects/Picklist_Translations__mdt/fields/hu__c.field-meta.xml
<CustomField>
    <fullName>hu__c</fullName>
    <description>Hungarian</description>
    <label>hu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>