force-app/main/default/objects/Picklist_Translations__mdt/fields/it__c.field-meta.xml
<CustomField>
    <fullName>it__c</fullName>
    <description>italian</description>
    <label>it</label>
    <length>255</length>
    <type>Text</type>
</CustomField>