force-app/main/default/objects/Picklist_Translations__mdt/fields/iw__c.field-meta.xml
<CustomField>
    <fullName>iw__c</fullName>
    <description>hebrew</description>
    <label>iw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>