force-app/main/default/objects/Picklist_Translations__mdt/fields/ja__c.field-meta.xml
<CustomField>
    <fullName>ja__c</fullName>
    <description>japanese</description>
    <label>ja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>