force-app/main/default/objects/Picklist_Translations__mdt/fields/ko__c.field-meta.xml
<CustomField>
    <fullName>ko__c</fullName>
    <description>korean</description>
    <label>ko</label>
    <length>255</length>
    <type>Text</type>
</CustomField>