force-app/main/default/objects/Picklist_Translations__mdt/fields/no__c.field-meta.xml
<CustomField>
    <fullName>no__c</fullName>
    <description>norwegian</description>
    <label>no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>