force-app/main/default/objects/Picklist_Translations__mdt/fields/Picklist_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Name_2__c</fullName>
    <label>Picklist Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>