force-app/main/default/objects/Picklist_Translations__mdt/fields/pl__c.field-meta.xml
<CustomField>
    <fullName>pl__c</fullName>
    <description>polish</description>
    <label>pl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>