force-app/main/default/objects/Picklist_Translations__mdt/fields/pt_br__c.field-meta.xml
<CustomField>
    <fullName>pt_br__c</fullName>
    <description>portugese-brazil</description>
    <label>pt_br</label>
    <length>255</length>
    <type>Text</type>
</CustomField>