force-app/main/default/objects/Picklist_Translations__mdt/fields/ro__c.field-meta.xml
<CustomField>
    <fullName>ro__c</fullName>
    <description>romanian</description>
    <label>ro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>