force-app/main/default/objects/Picklist_Translations__mdt/fields/ru__c.field-meta.xml
<CustomField>
    <fullName>ru__c</fullName>
    <description>russian</description>
    <label>ru</label>
    <length>255</length>
    <type>Text</type>
</CustomField>