force-app/main/default/objects/Picklist_Translations__mdt/fields/sv__c.field-meta.xml
<CustomField>
    <fullName>sv__c</fullName>
    <description>swedish</description>
    <label>sv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>