force-app/main/default/objects/Picklist_Translations__mdt/fields/zh_cn__c.field-meta.xml
<CustomField>
    <fullName>zh_cn__c</fullName>
    <label>zh_cn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>