force-app/main/default/objects/Picklist_Translations__mdt/fields/zh_tw__c.field-meta.xml
<CustomField>
    <fullName>zh_tw__c</fullName>
    <description>chinese traditional</description>
    <label>zh_tw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>